make compie with gcc 4.3.x
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1017 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Changed from version 1.1 --> 1.11
 
+minor changes:
+- compiles with g++ 4.3.x
+
 bug fixes: 
 - bug fix in border-border communication. 
 
