check PARTY for VW set to float.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1030 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/README
+++ b/README
@@ -51,7 +51,7 @@ command can look as follows:
 
 For METIS (version 4.0 or higher) see http://www-users.cs.umn.edu/~karypis/metis/metis/ ,
 see also the section Known bugs, when you using METIS. 
-For PARTY Lib (version 1.1 or higher) see http://wwwcs.upb.de/fachbereich/AG/monien/RESEARCH/PART/party.html .
+For PARTY Lib (version 1.99) see http://wwwcs.upb.de/fachbereich/AG/monien/RESEARCH/PART/party.html .
 
 You can use
 
