docu for COLLECT
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1032 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/README
+++ b/README
@@ -84,7 +84,7 @@ third row: Graph partitioning method, default method is 11 (METIS_PartGraphKway)
 Available methods are: 
 
 NONE = 0
-COLLECT = 1
+COLLECT = 1 (collect all elements to process 0)
 
 PARTY_helpfulSet = 3
 PARTY_kernighanLin = 4
